--- a/deploy/ingress.yaml
+++ b/deploy/ingress.yaml
@@ -1,13 +1,31 @@
+# apiVersion: networking.k8s.io/v1
+# kind: Ingress
+# metadata:
+#   name: cafe
+#   namespace: cafe
+# spec:
+#   ingressClassName: nginx
+#   rules:
+#   - host: tonygilkerson.us
+#     http:
+#       paths:
+#       - path: /
+#         pathType: Prefix
+#         backend:
+#           service:
+#             name: cafe
+#             port:
+#               number: 80
+#   # tls:
+#   # - hosts:
+#   #   - tonygilkerson.us             
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: reverse-proxy-workaround
-  namespace: nginx-gateway
+  name: http-ingress
 spec:
-  ingressClassName: nginx
   rules:
-  - host: tonygilkerson.us
-    http:
+  - http:
       paths:
       - path: /
         pathType: Prefix
@@ -16,6 +34,3 @@ spec:
             name: cafe
             port:
               number: 80
-  tls:
-  - hosts:
-    - tonygilkerson.us             
