make cafe helm chart

--- a/env/weeble/helmfile.yaml
+++ b/env/weeble/helmfile.yaml
@@ -1,7 +1,7 @@
 missingFileHandler: Error
 
 helmfiles:
-{{ range .Values.aceApps }}
+{{ range .Values.cafeApps }}
 - path: ../../apps/{{ . }}
   values:
   - {{ $.Values | toYaml | nindent 6}}
