--- a/apps/cafe/charts/cafe/templates/ingress.yaml
+++ b/apps/cafe/charts/cafe/templates/ingress.yaml
@@ -16,16 +16,17 @@
 #             name: cafe
 #             port:
 #               number: 80
-#   # tls:
-#   # - hosts:
-#   #   - tonygilkerson.us             
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: cafe
+  annotations:
+    # add an annotation indicating the issuer to use.
+    cert-manager.io/cluster-issuer: letsencrypt-cluster-prod  
 spec:
   rules:
-  - http:
+  - host: {{ .Values.domain | quote }}
+    http:
       paths:
       - path: /
         pathType: Prefix
@@ -34,3 +35,7 @@ spec:
             name: cafe
             port:
               number: 80
+  tls:
+  - hosts:
+    - {{ .Values.domain | quote }}
+    secretName: cafe-tls
