--- a/apps/cafe/charts/cafe/templates/clusterissuer.yaml
+++ b/apps/cafe/charts/cafe/templates/clusterissuer.yaml
@@ -1,7 +1,7 @@
 apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
 metadata:
-  name: letsencrypt-cluster-prod
+  name: letsencrypt
 spec:
   acme:
     # The ACME server URL
@@ -10,7 +10,7 @@ spec:
     email: tonygilkerson@gmail.com
     # Name of a secret used to store the ACME account private key
     privateKeySecretRef:
-      name: letsencrypt-cluster-prod
+      name: letsencrypt-account-key
     # Enable the HTTP-01 challenge provider
     solvers:
     - http01:
