--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,14 +1,14 @@
 name: Docker Image CI
 
-# on:
-#   push:
-#     branches: [ "main" ]
-#   pull_request:
-#     branches: [ "main" ]
 on:
   push:
-    tags:
-    - 'v*'
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
+# on:
+#   push:
+#     tags:
+#     - 'v*'
 jobs:
 
   build:
@@ -27,9 +27,9 @@ jobs:
         username: ${{ github.repository_owner }}
         password: ${{ secrets.AEG_REGISTRY_TOKEN }}
 
-    # - name: Build and Push Docker Image
-    #   uses: docker/build-push-action@v2
-    #   with:
-    #     push: true # Will only build if this is not here
-    #     tags: |
-    #       ghcr.io/${{ github.repository }}:latest
+    - name: Build and Push Docker Image
+      uses: docker/build-push-action@v2
+      with:
+        push: true # Will only build if this is not here
+        tags: |
+          ghcr.io/${{ github.repository }}:latest
