--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -23,7 +23,7 @@ jobs:
                                   # for semantic-release when using
                                   # semantic-release-action lower than @v3
       env:
-        GITHUB_TOKEN: ${{ env.AEG_ADMN_VAR }}
+        GITHUB_TOKEN: AEGTEST
 
   # build:
   #   needs: semantic-release
