--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -19,11 +19,12 @@ jobs:
     - name: Semantic Release
       uses: cycjimmy/semantic-release-action@v3
       with:
+        GITHUB_TOKEN: ${{ secrets.AEG_REGISTRY_TOKEN }}
         semantic_version: 19.0.5  # It is recommended to specify a version range
                                   # for semantic-release when using
                                   # semantic-release-action lower than @v3
-      env:
-        GITHUB_TOKEN: AEGTEST
+      # env:
+      #   GITHUB_TOKEN: AEGTEST
 
   # build:
   #   needs: semantic-release
