--- a/.releaserc
+++ b/.releaserc
@@ -5,5 +5,6 @@
   ],
   "plugins": [
     "@semantic-release/commit-analyzer"
-  ]
+  ],
+  "repositoryUrl": "https://github.com/tonygilkerson/cafe.git"
 }
