--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -19,13 +19,14 @@ jobs:
     - name: Semantic Release
       uses: cycjimmy/semantic-release-action@v3
       with:
-        # semantic_version: 19.0.5  # It is recommended to specify a version range
+        semantic_version: 19.0.5  # It is recommended to specify a version range
                                   # for semantic-release when using
                                   # semantic-release-action lower than @v3
         dry_run: false
-      env:
-        GITHUB_TOKEN: ${{ secrets.AEG_CAFE_ADMIN }}
-        GH_TOKEN: ${{ secrets.AEG_CAFE_ADMIN }}
+        github_token: ${{ secrets.AEG_CAFE_ADMIN }}
+      # env:
+      #   GITHUB_TOKEN: ${{ secrets.AEG_CAFE_ADMIN }}
+      #   GH_TOKEN: ${{ secrets.AEG_CAFE_ADMIN }}
 
 
   # build:
