--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,9 +1,10 @@
 name: build
 
-on:  
+on:
   push:
-    tags:
-      - '*'
+    # Sequence of patterns matched against refs/tags
+    tags:        
+      - v1.*
 
 jobs:
   build:
