--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,17 +1,11 @@
 name: build
 
-# on:
-#   push:
-#     # Sequence of patterns matched against refs/tags
-#     tags:        
-#       - v1.*
-
 on:
   push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-    
+    # Sequence of patterns matched against refs/tags
+    tags:        
+      - "*"
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -31,4 +25,4 @@ jobs:
       with:
         push: true # Will only build if this is not here
         tags: |
-          ghcr.io/${{ github.repository }}:${GITHUB_REF#refs/*/}
+          ghcr.io/${{ github.repository }}:vtag
