--- a/.github/workflows/semantic-release.yaml
+++ b/.github/workflows/semantic-release.yaml
@@ -14,6 +14,7 @@ jobs:
       uses: actions/checkout@v3
     - name: Semantic Release
       uses: cycjimmy/semantic-release-action@v3
+      id: semantic 
       with:
         semantic_version: 19.0.5  # It is recommended to specify a version range
                                   # for semantic-release when using
@@ -27,3 +28,11 @@ jobs:
       if: steps.semantic.outputs.new_release_published == 'true'
       run: |
         echo Semantic Release Version ${{ steps.semantic.outputs.new_release_version }}
+
+    - name: Build and Push Docker Image
+      if: steps.semantic.outputs.new_release_published == 'true'
+      uses: docker/build-push-action@v2
+      with:
+        push: true # Will only build if this is not here
+        tags: |
+          ghcr.io/${{ github.repository }}:${{ steps.semantic.outputs.new_release_version }}
