--- a/apps/cafe/k8s/deployment.yaml
+++ b/apps/cafe/k8s/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: cafe
-        image: ghcr.io/tonygilkerson/cafe:latest
+        image: ghcr.io/tonygilkerson/cafe:1.0.11
         ports:
         - name: http
           containerPort: 8080
