--- a/.github/workflows/semantic-release.yaml
+++ b/.github/workflows/semantic-release.yaml
@@ -7,11 +7,19 @@ on:
   #   branches: [ "main" ]
 
 jobs:
+
   semantic-release:
     runs-on: ubuntu-latest
     steps:
+    - name: InstallDeps
+      run: |
+        sudo add-apt-repository ppa:rmescandon/yq
+        sudo apt update
+        sudo apt install yq -y
+
     - name: Checkout
       uses: actions/checkout@v3
+    
     - name: Semantic Release
       uses: cycjimmy/semantic-release-action@v3
       id: semantic 
@@ -43,4 +51,4 @@ jobs:
       with:
         push: true # Will only build if this is not here
         tags: |
-          ghcr.io/${{ github.repository }}:${{ steps.semantic.outputs.new_release_version }}
+          ghcr.io/${{ github.repository }}:v${{ steps.semantic.outputs.new_release_version }}
