--- a/.github/workflows/semantic-release.yaml
+++ b/.github/workflows/semantic-release.yaml
@@ -6,20 +6,34 @@ on:
   # pull_request:
   #   branches: [ "main" ]
 
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+
 jobs:
 
   semantic-release:
     runs-on: ubuntu-latest
+      strategy:
+      matrix:
+        node-version: [19.x]
+
     steps:
+
+    - name: Checkout
+      uses: actions/checkout@v3
+
+    - name: setup node
+      uses: actions/setup-node@master
+      with:
+        node-version: ${{ matrix.node-version }}
+        
     - name: InstallDeps
       run: |
         sudo add-apt-repository ppa:rmescandon/yq
         sudo apt update
         sudo apt install yq -y
+        npm install @semantic-release/exec
 
-    - name: Checkout
-      uses: actions/checkout@v3
-    
     - name: Semantic Release
       uses: cycjimmy/semantic-release-action@v3
       id: semantic 
