--- a/.github/workflows/semantic-release.yaml
+++ b/.github/workflows/semantic-release.yaml
@@ -33,11 +33,8 @@ jobs:
         sudo apt update
         sudo apt install yq -y
         npm install @semantic-release/exec
-        pwd
-        ls -ltr
-        yq --help
-        yq -V
-        yq eval '.' ./apps/cafe/k8s/deployment.yaml
+        npm install @semantic-release/git 
+
     - name: Semantic Release
       uses: cycjimmy/semantic-release-action@v3
       id: semantic 
