fix argocd hosts

--- a/apps/argocd/k8s/ingress.yaml
+++ b/apps/argocd/k8s/ingress.yaml
@@ -19,5 +19,5 @@ spec:
               number: 443
   tls:
   - hosts:
-    - tonygilkerson.us
+    - argocd.tonygilkerson.us
     secretName: argocd-tls
