--- a/apps/argocd/k8s/ingress.yaml
+++ b/apps/argocd/k8s/ingress.yaml
@@ -4,8 +4,9 @@ metadata:
   name: argocd
   annotations:
     cert-manager.io/cluster-issuer: letsencrypt
-    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
-    nginx.ingress.kubernetes.io/ssl-passthrough: "true"    
+    kubernetes.io/tls-acme: "true"
+    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
+    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"      
 spec:
   ingressClassName: public
   rules:
@@ -18,7 +19,7 @@ spec:
           service:
             name: argocd-server
             port:
-              number: 443
+              name: https
   tls:
   - hosts:
     - argocd.tonygilkerson.us
