--- a/env/weeble/k8s/grafana.yaml
+++ b/env/weeble/k8s/grafana.yaml
@@ -32,14 +32,14 @@ spec:
             enabled: true
           security:
             allow_embedding: true
-        datasources:
-          datasources.yaml:
-            apiVersion: 1
-            datasources:
-            - name: Prometheus
-              type: prometheus
-              url: http://prometheus-server
-              isDefault: true
+        # datasources:
+        #   datasources.yaml:
+        #     apiVersion: 1
+        #     datasources:
+        #     - name: Prometheus
+        #       type: prometheus
+        #       url: http://prometheus-server
+        #       isDefault: true
         # Provision grafana-dashboards-kubernetes
         dashboardProviders:
           dashboardproviders.yaml:
@@ -75,6 +75,6 @@ spec:
               token: ''      
   destination:
     server: "https://kubernetes.default.svc"
-    namespace: visibility
+    namespace: kps
   syncPolicy:
     automated: {}
