--- a/env/weeble/k8s/serial-gateway.yaml
+++ b/env/weeble/k8s/serial-gateway.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: cafe
+  name: serial-gateway
   namespace: argocd
 spec:
   destination:
