--- a/apps/cafe/k8s/alert-manager-config.yaml
+++ b/apps/cafe/k8s/alert-manager-config.yaml
@@ -22,3 +22,28 @@ spec:
     - urlSecret: 
         key: url
         name: slack-webhook-url-mbx-door
+---
+apiVersion: monitoring.coreos.com/v1alpha1
+kind: AlertmanagerConfig
+metadata:
+  name: mbx-heartbeat
+  namespace: cafe
+  labels:
+    tonygilkerson.us/alerting: enabled
+spec:
+  route:
+    groupBy: ['job']
+    groupWait: 3s
+    groupInterval: 15m
+    repeatInterval: 12h
+    receiver: webhook
+    matchers:
+    - matchType: =
+      name: alertname
+      value: MbxHeartbeat        
+  receivers:
+  - name: webhook
+    webhookConfigs:
+    - urlSecret: 
+        key: url
+        name: slack-webhook-url-mbx-heartbeat
