--- a/apps/cafe/k8s/alert-manager-config.yaml
+++ b/apps/cafe/k8s/alert-manager-config.yaml
@@ -36,7 +36,7 @@ spec:
     groupWait: 3s
     groupInterval: 15m
     repeatInterval: 12h
-    receiver: webhook
+    receiver: slack-notifications
     matchers:
     - matchType: =
       name: alertname
