--- a/apps/cafe/k8s/alert-manager-config.yaml
+++ b/apps/cafe/k8s/alert-manager-config.yaml
@@ -23,56 +23,58 @@ spec:
         key: url
         name: slack-webhook-url-mbx-door
 ---
-# apiVersion: monitoring.coreos.com/v1alpha1
-# kind: AlertmanagerConfig
-# metadata:
-#   name: mbx-heartbeat
-#   namespace: cafe
-#   labels:
-#     tonygilkerson.us/alerting: enabled
-# spec:
-#   route:
-#     groupBy: ['job']
-#     groupWait: 3s
-#     groupInterval: 15m
-#     repeatInterval: 12h
-#     receiver: slack-notifications
-#     matchers:
-#     - matchType: =
-#       name: alertname
-#       value: MbxHeartbeat        
-#   receivers:
-#   - name: slack-notifications
-#     slackConfigs:
-#     - channel: "#mbx-notifications"
-#       apiURL:
-#         name: slack-webhook-url-mbx-notifications
-#         key: url
-# ---
 apiVersion: monitoring.coreos.com/v1alpha1
 kind: AlertmanagerConfig
 metadata:
-  name: watchdog-test
+  name: mbx-heartbeat
   namespace: cafe
   labels:
     tonygilkerson.us/alerting: enabled
 spec:
   route:
     groupBy: ['job']
-    groupWait: 1m
+    groupWait: 3s
     groupInterval: 1m
     repeatInterval: 1m
-    receiver: slack-notifications
+    # groupWait: 3s
+    # groupInterval: 15m
+    # repeatInterval: 12h
+    receiver: webhook-mbx-heartbeat
+    matchers:
+    - matchType: =
+      name: alertname
+      value: MbxHeartbeat        
   receivers:
-  - name: slack-notifications
-    slackConfigs:
-    - channel: '#mbx-notifications'
-      apiURL:
-        name: slack-webhook-url-chat
+  - name: webhook-mbx-heartbeat
+    webhookConfigs:
+    - urlSecret: 
         key: url
-      # httpConfig:
-      #   bearerTokenSecret:
-      #     name: slack-webhook-url-mbx-notifications
-      #     key: url
+        name: slack-webhook-url-mbx-heartbeat
+# ---
+# apiVersion: monitoring.coreos.com/v1alpha1
+# kind: AlertmanagerConfig
+# metadata:
+#   name: watchdog-test
+#   namespace: cafe
+#   labels:
+#     tonygilkerson.us/alerting: enabled
+# spec:
+#   route:
+#     groupBy: ['job']
+#     groupWait: 1m
+#     groupInterval: 1m
+#     repeatInterval: 1m
+#     receiver: slack-notifications
+#   receivers:
+#   - name: slack-notifications
+#     slackConfigs:
+#     - channel: '#mbx-notifications'
+#       apiURL:
+#         name: slack-webhook-url-chat
+#         key: url
+#       # httpConfig:
+#       #   bearerTokenSecret:
+#       #     name: slack-webhook-url-mbx-notifications
+#       #     key: url
 
 
