--- a/apps/cafe/k8s/prometheus-rules.yaml
+++ b/apps/cafe/k8s/prometheus-rules.yaml
@@ -14,6 +14,7 @@ spec:
       for: 0m
       annotations:
         description: You got mail!
+        text: You got mail!
       labels:
         severity: critical
         namespace: cafe
@@ -22,6 +23,7 @@ spec:
       for: 0m
       annotations:
         description: Heartbeat alert
+        text: Heartbeat alert
       labels:
         severity: critical
         namespace: cafe
