--- a/apps/cafe/k8s/alert-manager-config.yaml
+++ b/apps/cafe/k8s/alert-manager-config.yaml
@@ -50,31 +50,31 @@ spec:
     - urlSecret: 
         key: url
         name: slack-webhook-url-mbx-heartbeat
-# ---
-# apiVersion: monitoring.coreos.com/v1alpha1
-# kind: AlertmanagerConfig
-# metadata:
-#   name: watchdog-test
-#   namespace: cafe
-#   labels:
-#     tonygilkerson.us/alerting: enabled
-# spec:
-#   route:
-#     groupBy: ['job']
-#     groupWait: 1m
-#     groupInterval: 1m
-#     repeatInterval: 1m
-#     receiver: slack-notifications
-#   receivers:
-#   - name: slack-notifications
-#     slackConfigs:
-#     - channel: '#mbx-notifications'
-#       apiURL:
-#         name: slack-webhook-url-chat
-#         key: url
-#       # httpConfig:
-#       #   bearerTokenSecret:
-#       #     name: slack-webhook-url-mbx-notifications
-#       #     key: url
+---
+apiVersion: monitoring.coreos.com/v1alpha1
+kind: AlertmanagerConfig
+metadata:
+  name: watchdog-test
+  namespace: cafe
+  labels:
+    tonygilkerson.us/alerting: enabled
+spec:
+  route:
+    groupBy: ['job']
+    groupWait: 1m
+    groupInterval: 1m
+    repeatInterval: 1m
+    receiver: slack-notifications
+  receivers:
+  - name: slack-notifications
+    slackConfigs:
+    - channel: '#mbx-notifications'
+      apiURL:
+        name: slack-webhook-url-mbx-notifications
+        key: url
+      # httpConfig:
+      #   bearerTokenSecret:
+      #     name: slack-webhook-url-mbx-notifications
+      #     key: url
 
 
