--- a/apps/cafe/k8s/alert-manager-config.yaml
+++ b/apps/cafe/k8s/alert-manager-config.yaml
@@ -1,28 +1,28 @@
-apiVersion: monitoring.coreos.com/v1alpha1
-kind: AlertmanagerConfig
-metadata:
-  name: mbx-door-open
-  namespace: cafe
-  labels:
-    tonygilkerson.us/alerting: enabled
-spec:
-  route:
-    groupBy: ['job']
-    groupWait: 3s
-    groupInterval: 15m
-    repeatInterval: 12h
-    receiver: webhook
-    matchers:
-    - matchType: =
-      name: alertname
-      value: MbxDoorOpen        
-  receivers:
-  - name: webhook
-    webhookConfigs:
-    - urlSecret: 
-        key: url
-        name: slack-webhook-url-mbx-door
----
+# apiVersion: monitoring.coreos.com/v1alpha1
+# kind: AlertmanagerConfig
+# metadata:
+#   name: mbx-door-open
+#   namespace: cafe
+#   labels:
+#     tonygilkerson.us/alerting: enabled
+# spec:
+#   route:
+#     groupBy: ['job']
+#     groupWait: 3s
+#     groupInterval: 15m
+#     repeatInterval: 12h
+#     receiver: webhook
+#     matchers:
+#     - matchType: =
+#       name: alertname
+#       value: MbxDoorOpen        
+#   receivers:
+#   - name: webhook
+#     webhookConfigs:
+#     - urlSecret: 
+#         key: url
+#         name: slack-webhook-url-mbx-door
+# ---
 apiVersion: monitoring.coreos.com/v1alpha1
 kind: AlertmanagerConfig
 metadata:
@@ -34,8 +34,8 @@ spec:
   route:
     groupBy: ['job']
     groupWait: 3s
-    groupInterval: 1m
-    repeatInterval: 1m
+    groupInterval: 5m
+    repeatInterval: 12h
     # groupWait: 3s
     # groupInterval: 15m
     # repeatInterval: 12h
@@ -57,31 +57,31 @@ spec:
       apiURL:
         name: slack-webhook-url-mbx-notifications
         key: url        
----
-apiVersion: monitoring.coreos.com/v1alpha1
-kind: AlertmanagerConfig
-metadata:
-  name: watchdog-test
-  namespace: cafe
-  labels:
-    tonygilkerson.us/alerting: enabled
-spec:
-  route:
-    groupBy: ['job']
-    groupWait: 1m
-    groupInterval: 1m
-    repeatInterval: 1m
-    receiver: slack-notifications
-  receivers:
-  - name: slack-notifications
-    slackConfigs:
-    - channel: '#mbx-notifications'
-      apiURL:
-        name: slack-webhook-url-mbx-notifications
-        key: url
-      # httpConfig:
-      #   bearerTokenSecret:
-      #     name: slack-webhook-url-mbx-notifications
-      #     key: url
+# ---
+# apiVersion: monitoring.coreos.com/v1alpha1
+# kind: AlertmanagerConfig
+# metadata:
+#   name: watchdog-test
+#   namespace: cafe
+#   labels:
+#     tonygilkerson.us/alerting: enabled
+# spec:
+#   route:
+#     groupBy: ['job']
+#     groupWait: 1m
+#     groupInterval: 1m
+#     repeatInterval: 1m
+#     receiver: slack-notifications
+#   receivers:
+#   - name: slack-notifications
+#     slackConfigs:
+#     - channel: '#mbx-notifications'
+#       apiURL:
+#         name: slack-webhook-url-mbx-notifications
+#         key: url
+#       # httpConfig:
+#       #   bearerTokenSecret:
+#       #     name: slack-webhook-url-mbx-notifications
+#       #     key: url
 
 
