--- a/apps/cafe/k8s/alert-manager-config.yaml
+++ b/apps/cafe/k8s/alert-manager-config.yaml
@@ -34,7 +34,7 @@ spec:
   route:
     groupBy: ['job']
     groupWait: 3s
-    groupInterval: 5m
+    groupInterval: 1m
     repeatInterval: 12h
     # groupWait: 3s
     # groupInterval: 15m
@@ -57,31 +57,27 @@ spec:
       apiURL:
         name: slack-webhook-url-mbx-notifications
         key: url        
-# ---
-# apiVersion: monitoring.coreos.com/v1alpha1
-# kind: AlertmanagerConfig
-# metadata:
-#   name: watchdog-test
-#   namespace: cafe
-#   labels:
-#     tonygilkerson.us/alerting: enabled
-# spec:
-#   route:
-#     groupBy: ['job']
-#     groupWait: 1m
-#     groupInterval: 1m
-#     repeatInterval: 1m
-#     receiver: slack-notifications
-#   receivers:
-#   - name: slack-notifications
-#     slackConfigs:
-#     - channel: '#mbx-notifications'
-#       apiURL:
-#         name: slack-webhook-url-mbx-notifications
-#         key: url
-#       # httpConfig:
-#       #   bearerTokenSecret:
-#       #     name: slack-webhook-url-mbx-notifications
-#       #     key: url
+---
+apiVersion: monitoring.coreos.com/v1alpha1
+kind: AlertmanagerConfig
+metadata:
+  name: watchdog-test
+  namespace: cafe
+  labels:
+    tonygilkerson.us/alerting: enabled
+spec:
+  route:
+    groupBy: ['job']
+    groupWait: 1m
+    groupInterval: 1m
+    repeatInterval: 1m
+    receiver: slack-notifications
+  receivers:
+  - name: slack-notifications
+    slackConfigs:
+    - channel: '#mbx-door'
+      apiURL:
+        name: slack-webhook-url-mbx-notifications
+        key: url  
 
 
