--- a/apps/cafe/k8s/alert-manager-config.yaml
+++ b/apps/cafe/k8s/alert-manager-config.yaml
@@ -1,28 +1,29 @@
-# apiVersion: monitoring.coreos.com/v1alpha1
-# kind: AlertmanagerConfig
-# metadata:
-#   name: mbx-door-open
-#   namespace: cafe
-#   labels:
-#     tonygilkerson.us/alerting: enabled
-# spec:
-#   route:
-#     groupBy: ['job']
-#     groupWait: 3s
-#     groupInterval: 15m
-#     repeatInterval: 12h
-#     receiver: webhook
-#     matchers:
-#     - matchType: =
-#       name: alertname
-#       value: MbxDoorOpen        
-#   receivers:
-#   - name: webhook
-#     webhookConfigs:
-#     - urlSecret: 
-#         key: url
-#         name: slack-webhook-url-mbx-door
-# ---
+apiVersion: monitoring.coreos.com/v1alpha1
+kind: AlertmanagerConfig
+metadata:
+  name: mbx-door-open
+  namespace: cafe
+  labels:
+    tonygilkerson.us/alerting: enabled
+spec:
+  route:
+    groupBy: ['job']
+    groupWait: 1m
+    groupInterval: 15m
+    repeatInterval: 12h
+    receiver: slack-notifications-mbx-door
+    matchers:
+    - matchType: =
+      name: alertname
+      value: MbxDoorOpen        
+  receivers:
+  - name: slack-notifications-mbx-door
+    slackConfigs:
+    - channel: '#mbx-door'
+      apiURL:
+        name: slack-webhook-url-mbx-door
+        key: url
+---
 apiVersion: monitoring.coreos.com/v1alpha1
 kind: AlertmanagerConfig
 metadata:
@@ -46,43 +47,12 @@ spec:
       name: alertname
       value: MbxHeartbeat        
   receivers:
-  # - name: webhook-mbx-heartbeat
-  #   webhookConfigs:
-  #   - urlSecret: 
-  #       key: url
-  #       name: slack-webhook-url-mbx-heartbeat
   - name: slack-notifications
     slackConfigs:
-    # - channel: '#mbx-notifications'
-    - channel: '#mbx-door'
+    - channel: '#mbx-notifications'
       apiURL:
         name: slack-webhook-url-mbx-notifications
         key: url        
-# ---
-# apiVersion: monitoring.coreos.com/v1alpha1
-# kind: AlertmanagerConfig
-# metadata:
-#   name: watchdog-test
-#   namespace: cafe
-#   labels:
-#     tonygilkerson.us/alerting: enabled
-# spec:
-#   route:
-#     groupBy: ['job']
-#     groupWait: 1m
-#     groupInterval: 1m
-#     repeatInterval: 1m
-#     receiver: slack-notifications
-#     matchers:
-#     - matchType: =
-#       name: alertname
-#       value: Watchdog    
-#   receivers:
-#   - name: slack-notifications
-#     slackConfigs:
-#     - channel: '#mbx-notifications'
-#       apiURL:
-#         name: slack-webhook-url-mbx-notifications
-#         key: url  
+
 
 
