--- a/apps/cafe/k8s/alert-manager-config.yaml
+++ b/apps/cafe/k8s/alert-manager-config.yaml
@@ -41,7 +41,7 @@ spec:
     matchers:
     - matchType: =
       name: alertname
-      value: MbxDoorOpen        
+      value: MbxCars        
   receivers:
   - name: slack-notifications-mbx-cars
     slackConfigs:
