fix(cd): get rid of Argo

--- a/apps/cafe/charts/cafe/templates/limit-range.yaml
+++ b/apps/cafe/charts/cafe/templates/limit-range.yaml
@@ -2,27 +2,15 @@ apiVersion: v1
 kind: LimitRange
 metadata:
   name: limit-range
-  namespace: argocd
-spec:
-  limits:
-  - default: # this section defines default limits
-      cpu: 32m
-      memory: 64Mi
-    # defaultRequest: # this section defines default requests
-    #   cpu: 32m
-    #   memory: 64Mi
-    type: Container
----
-apiVersion: v1
-kind: LimitRange
-metadata:
-  name: limit-range
   namespace: cafe
 spec:
   limits:
   - default: # this section defines default limits
       cpu: 32m
       memory: 64Mi
+    defaultRequest: # this section defines default requests
+      cpu: 32m
+      memory: 32Mi
     type: Container
 ---
 apiVersion: v1
@@ -35,6 +23,9 @@ spec:
   - default: # this section defines default limits
       cpu: 32m
       memory: 64Mi
+    defaultRequest: # this section defines default requests
+      cpu: 32m
+      memory: 32Mi
     type: Container
 ---
 apiVersion: v1
@@ -47,6 +38,9 @@ spec:
   - default: # this section defines default limits
       cpu: 64m
       memory: 256Mi
+    defaultRequest: # this section defines default requests
+      cpu: 32m
+      memory: 32Mi
     type: Container
 ---
 apiVersion: v1
@@ -59,6 +53,9 @@ spec:
   - default: # this section defines default limits
       cpu: 32m
       memory: 64Mi
+    defaultRequest: # this section defines default requests
+      cpu: 32m
+      memory: 32Mi
     type: Container
 ---
 apiVersion: v1
@@ -71,17 +68,9 @@ spec:
   - default: # this section defines default limits
       cpu: 64m
       memory: 128Mi
+    defaultRequest: # this section defines default requests
+      cpu: 32m
+      memory: 32Mi
     type: Container
----
-# apiVersion: v1
-# kind: LimitRange
-# metadata:
-#   name: limit-range
-#   namespace: ingress
-# spec:
-#   limits:
-#   - default: # this section defines default limits
-#       cpu: 32m
-#       memory: 64Mi
-#     type: Container
+
 
