--- a/env/weeble/helmfile.yaml
+++ b/env/weeble/helmfile.yaml
@@ -5,6 +5,12 @@ helmfiles:
 - path: ../../apps/kps
   values:
   - {{ $.Values | toYaml | nindent 4}}
+- path: ../../apps/cafe
+  values:
+  - {{ $.Values | toYaml | nindent 4}}
+- path: ../../apps/serial-gateway
+  values:
+  - {{ $.Values | toYaml | nindent 4}}
 
 
 
