Add castopod app

--- a/apps/cafe/charts/cafe/templates/namespace.yaml
+++ b/apps/cafe/charts/cafe/templates/namespace.yaml
@@ -22,3 +22,10 @@ metadata:
   name:  kps
   labels:
     tonygilkerson.us/alerting: enabled
+---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name:  castopod
+  labels:
+    tonygilkerson.us/alerting: enabled
